--- a/views/error.pug
+++ b/views/error.pug
@@ -1,15 +1,4 @@
-html
-  head
-    title= title
-  body
-    nav
-      h1= page
-      ul
-        li
-          a(href=linkA class='nav-link')= linkA 
-        li 
-          a(href=linkB class='nav-link')= linkB 
-        li 
-          a(href=linkC class='nav-link')= linkC
-    section
-      h2= message
+extends /layouts/main-layout.pug
+
+block content 
+  p= alert 
