--- a/views/index.pug
+++ b/views/index.pug
@@ -1,15 +1,5 @@
 
-html
-  head
-    title= title
-  body
-    nav
-      h1= page
-      ul
-        li
-          a(href=linkA class='nav-link')= linkA 
-        li 
-          a(href=linkB class='nav-link')= linkB 
-        li 
-          a(href=linkC class='nav-link')= linkC
+extends layouts/main-layout.pug
 
+block content
+  p This content is from index.pug! 
