--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,16 @@
 
 extends layouts/main-layout.pug
 
+block content_authenticatedNav
+  if authenticated
+    li(class='nav-link') 
+      a(href="/logout") Logout
+  else
+    li(class='nav-link') 
+      a(href="/login") Login  
 block content
-  p This content is from index.pug! 
+  p This content is from index.pug!
+block more_content
+  p The best movie is #{ bestMovie }
+  p= bestMovie
+  +user-form
