--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -4,12 +4,11 @@ html(lang="en")
     include ../partials/head.pug
     body
       include ../partials/navbar.pug
-      //- include ../partials/header.pug
       include ../partials/header.pug
       block content
-      section
+      //- section
         
-        ul
-          for user in users
-            li=user
+        //- ul
+        //-   for user in users
+        //-     li=user
       block more_content
