--- a/views/users.pug
+++ b/views/users.pug
@@ -8,4 +8,10 @@ block content_authenticatedNav
     li(class='nav-link') 
       a(href="/login") Login  
 block content
-  p This content is from users.pug!
+  section
+    if users
+      ul
+        for user in users
+          li=user
+    
+
