successfully added all CRUD routes for characters

--- a/views/character.pug
+++ b/views/character.pug
@@ -23,4 +23,10 @@ block content
             tr(class="trow") 
               td Class:
               td=character.class_type
+            tr(class="trow") 
+              td Age:
+              td=character.age
+            tr(class="trow") 
+              td Hit Points:
+              td=character.hit_points
             
