--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -4,10 +4,10 @@ nav(class="navbar")
         a(href="/" class='nav-link') D&D Dungeon Builder
     ul
         li(class="nav-link")
-            a(href="/characters") Characters 
+            a(href="/api/characters") Characters 
         li(class="nav-link")
-            a(href="/monsters") Monsters  
+            a(href="/api/monsters") Monsters  
         li(class="nav-link") 
-            a(href="/dungeons") Dungeons
+            a(href="/api/dungeons") Dungeons
         block content_authenticatedNav
     
