--- a/views/characters.pug
+++ b/views/characters.pug
@@ -8,8 +8,28 @@ block content_authenticatedNav
     li(class='nav-link') 
       a(href="/login") Login  
 block content
-  section
+  div#app
     if characters
-      ul
-        for character in characters
-          li=character 
+      div(class="characters-list-container")
+        each character in characters
+          div(class="character-view")
+            img(class="character-view-image" src=character.img)
+            table 
+              tbody 
+                tr(class="trow") 
+                  td Name:
+                  td=character.name
+                tr(class="trow") 
+                  td Sex:
+                  td=character.gender
+                tr(class="trow") 
+                  td Class:
+                  td=character.class_type
+                tr(class="trow") 
+                  td Age:
+                  td=character.age
+                tr(class="trow") 
+                  td Hit Points:
+                  td=character.hit_points
+              
+        
